[package]
name = "newdivicards"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.1"
reqwest = "0.11.17"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
strsim = "0.10.0"
tokio = { version = "1.28.0", features = ["full"] }
